--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
-    "lint": "eslint src tools --ext ts,tsx --max-warnings 0"
+    "lint": "eslint src tools --ext ts,tsx --max-warnings 0",
+    "dev": "vite"
   },
   "config": {
     "forge": "./tools/forge/forge.config.js"
@@ -38,22 +39,31 @@
     "@electron-forge/maker-squirrel": "^6.2.1",
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-vite": "^6.2.1",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.2",
+    "autoprefixer": "^10.4.16",
     "electron": "25.2.0",
+    "electron-traywindow-positioner": "^1.2.0",
     "eslint": "^8.44.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "postcss": "^8.4.31",
     "sass": "^1.63.6",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.1.6",
     "vite": "^4.4.0"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-day-picker": "^8.9.1",
+    "react-dom": "^18.2.0",
+    "tailwind-datepicker-react": "^1.4.3"
   }
 }
