--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.2",
     "autoprefixer": "^10.4.16",
+    "dotenv": "^16.3.1",
     "electron": "25.2.0",
     "electron-traywindow-positioner": "^1.2.0",
     "eslint": "^8.44.0",
