--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "name": "electrovite-react",
-  "productName": "ElectroVite",
-  "version": "1.2.0",
-  "description": "A prebuilt project for creating desktop apps with Electron, React, TypeScript & super fast hot-reload of Vite.",
+  "name": "epocher",
+  "productName": "Epocher",
+  "version": "1.0.0",
+  "description": "A Mac Utility app to convert Epoch time to human readable time and vice versa.",
   "main": ".vite/build/main.js",
   "license": "MIT",
-  "author": {
-    "name": "guasam",
-    "url": "https://github.com/guasam"
-  },
   "keywords": [
     "electrovite",
     "electron hot reload fast",
@@ -33,38 +29,42 @@
     "forge": "./tools/forge/forge.config.js"
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.2.1",
-    "@electron-forge/maker-deb": "^6.2.1",
-    "@electron-forge/maker-rpm": "^6.2.1",
-    "@electron-forge/maker-squirrel": "^6.2.1",
-    "@electron-forge/maker-zip": "^6.2.1",
-    "@electron-forge/plugin-vite": "^6.2.1",
+    "@electron-forge/cli": "^6.4.2",
+    "@electron-forge/maker-deb": "^6.4.2",
+    "@electron-forge/maker-rpm": "^6.4.2",
+    "@electron-forge/maker-squirrel": "^6.4.2",
+    "@electron-forge/maker-zip": "^6.4.2",
+    "@electron-forge/plugin-vite": "^6.4.2",
     "@types/node": "^20.10.0",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
-    "@typescript-eslint/eslint-plugin": "^5.61.0",
-    "@typescript-eslint/parser": "^5.61.0",
-    "@vitejs/plugin-react": "^4.0.2",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.17",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.4.16",
     "dotenv": "^16.3.1",
     "electron": "25.2.0",
     "electron-traywindow-positioner": "^1.2.0",
-    "eslint": "^8.44.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
+    "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
-    "sass": "^1.63.6",
+    "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.0"
+    "typescript": "^5.3.2",
+    "vite": "^4.5.0"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@babel/runtime": "^7.23.4",
+    "core-js": "^3.33.3",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
+    "debug": "^4.3.4",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
-    "tailwind-datepicker-react": "^1.4.3"
+    "regenerator-runtime": "^0.14.0"
   }
 }
